# j-flow

./: .gitignore  .jflow.toml.example  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  example-workflow.sh  stacked-changes-vanilla-jj.md
.claude/: settings.local.json
src/: config.rs  main.rs
src/commands/: init.rs  land.rs  mod.rs  pull.rs  push.rs  reorder.rs  status.rs  wip.rs
src/jj/: mod.rs  query.rs  runner.rs  types.rs
src/ui/: colors.rs  icons.rs  mod.rs  render.rs
tests/: integration_test.rs
