[package]
name = "jf"
version = "0.2.0"
edition = "2021"
authors = ["jflow contributors"]
description = "Beautiful workflow tool for Jujutsu VCS"
license = "MIT"

[[bin]]
name = "jf"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Terminal output
colored = "2.1"
console = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Filesystem paths
dirs = "5.0"

# Async runtime (for future GitHub API)
tokio = { version = "1.35", features = ["full"], optional = true }

# GitHub API (optional, for future use)
octocrab = { version = "0.38", optional = true }

[features]
default = []
github = ["tokio", "octocrab"]

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
